idf_component_register(
                SRCS 
                  "./jsmn_test.cpp"
                  "./rdjson_test.cpp"
                  "./rdjson_perf_test.cpp"
                  "./ConfigBase_test.cpp"
                  "./exprCtx_unit_test.cpp"
                  "./expressions_unit_test.cpp"
                  "./ProtocolOverAscii_test.cpp"
                INCLUDE_DIRS
                  "."
                REQUIRES
                  unity
                  core
                )
